--- a/GameServerGraphic/GameServerGraphic.csproj
+++ b/GameServerGraphic/GameServerGraphic.csproj
@@ -28,7 +28,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;ASTAR_RECAST_LARGER_TILES;graphic;ASTAR_NO_POINT_GRAPH</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -53,6 +53,9 @@
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.21.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.0.21\lib\net48\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="ObjectDumping, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ObjectDumper.NET.3.0.20251.1\lib\net45\ObjectDumping.dll</HintPath>
     </Reference>
     <Reference Include="Pathfinding.ClipperLib">
       <HintPath>AStarProgram\Plugins\Clipper\Pathfinding.ClipperLib.dll</HintPath>
@@ -218,6 +221,7 @@
     <Compile Include="Unity\ArcherCommander.cs" />
     <Compile Include="Unity\AttackingSystem.cs" />
     <Compile Include="Unity\BonusClasses.cs" />
+    <Compile Include="Unity\FormationObject.cs" />
     <Compile Include="Unity\Server\Client.cs" />
     <Compile Include="Unity\CollisionDetector.cs" />
     <Compile Include="Unity\CommanderScript.cs" />
