--- a/GameServerGraphic/packages.config
+++ b/GameServerGraphic/packages.config
@@ -5,11 +5,19 @@
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net48" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net48" />
+  <package id="MathNet.Numerics" version="4.15.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="MySql.Data" version="8.0.21" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="ObjectDumper.NET" version="3.0.20251.1" targetFramework="net48" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net48" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
