--- a/GameServerGraphic/GameServerGraphic.csproj
+++ b/GameServerGraphic/GameServerGraphic.csproj
@@ -77,6 +77,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>AStarProgram\Plugins\Poly2Tri\Pathfinding.Poly2Tri.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2016.1.0\lib\net40\Renci.SshNet.dll</HintPath>
     </Reference>
@@ -134,6 +135,7 @@
     <Reference Include="Ubiety.Dns.Core, Version=2.2.1.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.0.21\lib\net48\Ubiety.Dns.Core.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
     <Reference Include="Zstandard.Net, Version=1.1.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.0.21\lib\net48\Zstandard.Net.dll</HintPath>
     </Reference>
@@ -253,6 +255,7 @@
     <Compile Include="Unity\AttackingSystem.cs" />
     <Compile Include="Unity\BonusClasses.cs" />
     <Compile Include="Unity\FormationObject.cs" />
+    <Compile Include="Unity\NewAttackingSystem.cs" />
     <Compile Include="Unity\Server\Client.cs" />
     <Compile Include="Unity\CollisionDetector.cs" />
     <Compile Include="Unity\CommanderScript.cs" />
